--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "ES2022",
-    "lib": [
-      "ES2022"
-    ],
+    "target": "ES2020",
     "outDir": "out",
-    "rootDir": "src",
+    "lib": [
+      "ES2020"
+    ],
     "sourceMap": true,
+    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "src"
+  "exclude": [
+    "node_modules",
+    ".vscode"
   ]
 }
